# friction-marl

./: .gitignore  CITATION.cff  MARL_FINDINGS.md  README.md  extract_results.py  generate_appendix_latex.py  pyproject.toml  requirements.txt  run_experiments.py  run_gpu.py  run_optimized.py  run_parallel.py
friction_marl/: __init__.py
friction_marl/agents/: __init__.py  iql.py
friction_marl/envs/: __init__.py  resource_allocation.py
friction_marl/experiments/: __init__.py  analysis.py  factorial_design.py
friction_marl/utils/: __init__.py  metrics.py  visualization.py
results/: CROSS_VALIDATION_REPORT.md  cross_validation_full.py
results-fullgrid-100ep-2rep/: episode_results.csv  policy_vectors.npz  replication_results.csv
results-smoke/: episode_results.csv  policy_vectors.npz  replication_results.csv
results-smoke/analysis/: metrics.csv  regressions.csv
results/cross_validation/: CROSS_VALIDATION_REPORT.md  anova_cpu_pareto_inefficiency.csv  anova_cpu_policy_variance.csv  anova_cpu_reward_gap.csv  anova_effect_comparison.csv  condition_comparison.csv  condition_comparison_full.csv  cross_validate.py  mann_whitney_results.csv  summary_table.tex  table_anova_comparison.tex  table_anova_cpu_full.tex  table_cv_summary.tex  table_findings_replication.tex
results/full_factorial/analysis/: metrics.csv  regressions.csv
results/gpu_factorial/analysis/: ANALYSIS_REPORT.md  DYNAMICS_REPORT.md  anova_convergence.csv  anova_table.csv  condition_statistics.csv  dynamics_analysis.py  metrics.csv  regression_summary.txt  regressions.csv  run_analysis.py  (+1 more)
(+10 files in other folders)
